--- a/profile.html
+++ b/profile.html
@@ -16,37 +16,46 @@
       <h2>Welcome, Vtrix</h2>
       <button id="logout" class="button">Logout</button>
     </div>
+    <div id="content">
+      <div id="cards"></div>
+      <div id="addCard">
+        <form id="addCardForm">
+          <input
+            type="text"
+            id="cardHolder"
+            class="input"
+            name="cardholder"
+            placeholder="Card Holder Name"
+          />
+          <input
+            type="text"
+            id="cardNum"
+            class="input"
+            name="cardnumber"
+            placeholder="Card Number"
+          />
+          <input
+            type="text"
+            id="phoneNum"
+            class="input"
+            name="phonenumber"
+            placeholder="Contact Number"
+          />
 
-    <div id="cards">
-      <div class="card">
-        <div class="card__front card__part">
-          <p class="card_numer">**** **** **** 6258</p>
-          <div class="card__space-75">
-            <span class="card__label">Card holder</span>
-            <p class="card__info">John Doe</p>
-          </div>
-          <div class="card__space-25">
-            <span class="card__label">Expires</span>
-            <p class="card__info">10/25</p>
-          </div>
-        </div>
+          <select class="selector input" id="cardType" name="cardtype">
+            <option value="credit">Credit</option>
+            <option value="debit">Debit</option>
+          </select>
+          <input
+            type="password"
+            class="input"
+            id="cvv"
+            name="cvv"
+            placeholder="CVV"
+          />
 
-        <div class="card__back card__part">
-          <div class="card__black-line"></div>
-          <div class="card__back-content">
-            <div class="card__secret">
-              <p class="card__secret--last">420</p>
-            </div>
-            <img
-              class="card__back-square card__square"
-              src="https://image.ibb.co/cZeFjx/little_square.png"
-            />
-            <img
-              class="card__back-logo card__logo"
-              src="https://www.fireeye.com/partners/strategic-technology-partners/visa-fireeye-cyber-watch-program/_jcr_content/content-par/grid_20_80_full/grid-20-left/image.img.png/1505254557388.png"
-            />
-          </div>
-        </div>
+          <button class="button" id="addCardButton">Add</button>
+        </form>
       </div>
     </div>
 
