added expiring date to card

--- a/profile.html
+++ b/profile.html
@@ -50,12 +50,11 @@
             placeholder="Card Number"
           />
           <input
-            type="text"
-            id="phoneNum"
+            type="date"
+            id="expDate"
             class="input"
             required
-            name="phonenumber"
-            placeholder="Contact Number"
+            name="expiring"
           />
 
           <select class="selector input" id="cardType" name="cardtype">
